--- a/Flowers-Shop/src/main/resources/templates/cart.html
+++ b/Flowers-Shop/src/main/resources/templates/cart.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/commons::head}"></head>
-<body class="cart">
+<body class="bg-black">
 <header th:replace="~{fragments/commons::nav}"></header>
 <div class="container text-center my-5 text-white">
-
     <h1 class="display-6 p-2 border-bottom m-5 fw-bold fst-italic">CART</h1>
-
     <div class="container-fluid mb-5">
-
         <div th:each="item: ${cart.getItems()}" class="row align-items-center m-3 cart-round">
-
             <div class="media col-12 col-md-3 p-2">
                 <img style="height: 300px;" th:src="${item.getBouquet().getUrl()}" alt="picture of bouquet">
             </div>
-
             <div class="col-12 col-md-7 fs-5">
                 <p th:text="${item.getBouquet().getDescription()}">{Description}</p>
                 <p class="py-3 fst-italic" th:text="|Quantity: ${item.getQuantity()} pcs|">Quantity: {2} pcs</p>
                 <p class="fw-bold fst-italic" th:text="|Price per pcs: ${item.getBouquet().getPrice()} $|">Price:
                     {2365.26} $</p>
             </div>
-
             <div class="col-12 col-md-2">
                 <form th:action="@{/cart/remove/{id}(id=*{item.getId()})}" th:method="post">
                     <button type="submit" class="remove-btn rounded-pill px-3 py-1">Remove</button>
                 </form>
             </div>
-
         </div>
     </div>
-
     <div class="mt-3 mb-5">
         <form th:action="@{/order/{cartId}(cartId=*{cart.getId()})}" th:method="post">
             <p th:if="${cart.getTotalPrice()} != 0" class="fs-3 fw-bold fst-italic m-3"
@@ -47,7 +39,6 @@
         </form>
     </div>
 </div>
-
 <footer th:replace="~{fragments/commons::footer}"></footer>
 </body>
 </html>
