--- a/Flowers-Shop/src/main/resources/templates/fragments/commons.html
+++ b/Flowers-Shop/src/main/resources/templates/fragments/commons.html
@@ -4,85 +4,99 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 >
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title th:text="#{title_message}">ОРХИДЕЯ</title>
-  <link rel="icon" href="/images/orchid_9704101.png" type="image/icon type">
-  <link rel="stylesheet" href="/css/reset-css.css">
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title th:text="#{title_message}">ОРХИДЕЯ</title>
+    <link rel="icon" href="/images/orchid_9704101.png" type="image/icon type">
+    <link rel="stylesheet" href="/css/reset-css.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<header >
-  <nav>
-    <ul>
-      <li sec:authorize="!hasRole('ROLE_MODERATOR')" class="glowing-gold">
-        <img src="/images/orchid_9704101.png" alt="orchid">
-        <a sec:authorize="isAuthenticated()" th:href="@{/home}" th:text="#{nav_bar_company}">Orchid</a>
-        <a sec:authorize="!isAuthenticated()" th:href="@{/}" th:text="#{nav_bar_company}">Orchid</a>
-      </li>
-      <li sec:authorize="hasRole('ROLE_ADMIN')">
-        <a class="glowing-gold" th:href="@{/bouquet/add}" th:text="#{nav_bar_add_bouquet}">Add Bouquet</a>
-      </li>
-      <li sec:authorize="!hasRole('ROLE_MODERATOR')">
-        <a class="glowing-gold" th:href="@{/home}" th:text="#{nav_bar_gallery}">Gallery</a>
-      </li>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark z-3">
+        <div class="container">
+            <a class="navbar-brand glowing-gold align-text-center" sec:authorize="isAuthenticated()" th:href="@{/home}">
+                <img src="/images/orchid_9704101.png" alt="orchid" class="d-inline-block">
+                <span th:text="#{nav_bar_company}">Orchid</span>
+            </a>
+            <a class="navbar-brand glowing-gold d-flex align-items-center" sec:authorize="!isAuthenticated()"
+               th:href="@{/}">
+                <img src="/images/orchid_9704101.png" alt="orchid" class="d-inline-block">
+                <span th:text="#{nav_bar_company}">Orchid</span>
+            </a>
+            <button class="navbar-toggler glowing-gold" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto gap-2 text-center">
+                    <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+                        <a class="nav-link glowing-gold" th:href="@{/bouquet/add}" th:text="#{nav_bar_add_bouquet}">Add
+                            Bouquet</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="isAuthenticated() && !hasRole('ROLE_MODERATOR')">
+                        <a class="nav-link glowing-gold" th:href="@{/home}" th:text="#{nav_bar_gallery}">Gallery</a>
+                    </li>
+                    <!--                    <li class="nav-item" sec:authorize="isAuthenticated() && !hasAnyRole('ROLE_ADMIN', 'ROLE_MODERATOR')">-->
+                    <!--                        <span class="text-white navbar-text" th:text="#{nav_bar_welcome}">Welcome, </span>-->
+                    <!--                        <span class="text-white navbar-text" sec:authentication="name">Anonymous</span>-->
+                    <!--                    </li>-->
+                    <li class="nav-item" sec:authorize="!isAuthenticated()">
+                        <a class="nav-link glowing-gold" th:href="@{/login}" th:text="#{nav_bar_login}">Login</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="!isAuthenticated()">
+                        <a class="nav-link glowing-gold" th:href="@{/register}"
+                           th:text="#{nav_bar_register}">Register</a>
+                    </li>
+                    <li class="nav-item"
+                        sec:authorize="isAuthenticated() && !hasAnyRole('ROLE_ADMIN', 'ROLE_MODERATOR')">
+                        <a class="nav-link glowing-gold" th:href="@{/orders}" th:text="#{nav_bar_my_orders}">My
+                            orders</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="hasRole('ROLE_MODERATOR')">
+                        <a class="nav-link glowing-gold" th:href="@{/orders/pending}">All pending orders</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+                        <a class="nav-link glowing-gold" th:href="@{/users/all}">Users</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+                        <a class="nav-link glowing-gold" th:href="@{/orders/all}">Orders</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <form th:action="@{/logout}" th:method="post">
+                            <button type="submit" class="text-white bg-black glowing-gold" th:text="#{nav_bar_logout}">
+                                Logout
+                            </button>
+                        </form>
+                    </li>
+                    <li class="nav-item glowing-gold">
+                        <form>
+                            <label class="text-white px-2" for="lang" th:text="#{nav_bar_language}">Language</label>
+                            <select class="text-white bg-black" id="lang" name="lang" onchange="this.form.submit()">
+                                <option value="en_EN" th:selected="${#locale.toString()} == 'en_US'">En</option>
+                                <option value="bg_BG" th:selected="${#locale.toString()} == 'bg_BG'">Бг</option>
+                            </select>
+                        </form>
+                    </li>
+                    <li class="nav-item"
+                        sec:authorize="isAuthenticated() && !hasAnyRole('ROLE_ADMIN', 'ROLE_MODERATOR')">
+                        <a class="nav-link glowing-gold" th:href="@{/cart}">Cart
+                            <!--          TODO: show the number of products in the cart-->
+                            <!--          <img src="/images/shopping-cart.png" alt="cart">-->
+                        </a>
+                    </li>
 
-<!--      <li sec:authorize="hasRole('ROLE_MODERATOR')">-->
-<!--        <a class="glowing-gold" th:href="@{/order/change-status}">Change status</a>-->
-<!--      </li>-->
-
-      <li sec:authorize="isAuthenticated() && !hasAnyRole('ROLE_ADMIN', 'ROLE_MODERATOR')">
-        <span class="text-white" th:text="#{nav_bar_welcome}">Welcome, </span>
-        <span class="text-white" sec:authentication="name">Anonymous</span>
-      </li>
-      <li sec:authorize="!isAuthenticated()">
-        <a class="glowing-gold" th:href="@{/login}" th:text="#{nav_bar_login}">Login</a>
-      </li>
-      <li sec:authorize="!isAuthenticated()" >
-        <a class="glowing-gold" th:href="@{/register}" th:text="#{nav_bar_register}">Register</a>
-      </li>
-      <li sec:authorize="!hasAnyRole('ROLE_ADMIN', 'ROLE_MODERATOR')">
-        <a class="glowing-gold" th:href="@{/orders}" th:text="#{nav_bar_my_orders}">My orders</a>
-      </li>
-      <li sec:authorize="hasRole('ROLE_MODERATOR')">
-        <a class="glowing-gold" th:href="@{/orders/pending}">All pending orders</a>
-      </li>
-
-      <li sec:authorize="hasRole('ROLE_ADMIN')">
-        <a class="glowing-gold" th:href="@{/users/all}">Users</a>
-      </li>
-      <li sec:authorize="hasRole('ROLE_ADMIN')">
-        <a class="glowing-gold" th:href="@{/orders/all}">Orders</a>
-      </li>
-
-      <li sec:authorize="isAuthenticated()">
-        <form th:action="@{/logout}" th:method="post">
-          <button type="submit" class="text-white bg-black glowing-gold" th:text="#{nav_bar_logout}">Logout</button>
-        </form>
-      </li>
-      <li class="glowing-gold">
-        <form >
-          <label class="text-white px-2" for="lang" th:text="#{nav_bar_language}">Language</label>
-          <select class="text-white bg-black" id="lang" name="lang" onchange="this.form.submit()">
-            <option value="en_EN" th:selected="${#locale.toString()} == 'en_US'">En</option>
-            <option value="bg_BG" th:selected="${#locale.toString()} == 'bg_BG'">Бг</option>
-          </select>
-        </form>
-      </li>
-      <li sec:authorize="isAuthenticated() && !hasAnyRole('ROLE_ADMIN', 'ROLE_MODERATOR')">
-        <a class="glowing-gold" th:href="@{/cart}">Cart
-<!--          TODO: show the number of products in the cart-->
-<!--          <img src="/images/shopping-cart.png" alt="cart">-->
-        </a>
-      </li>
-    </ul>
-  </nav>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </header>
 <footer>
-  <!-- todo: fix responsive issue with position-fixed -->
-  <div th:text="|&copy #{footer_message}|">Ivan Rusenov 2024</div>
+    <!-- todo: fix responsive issue with position-fixed -->
+    <div th:text="|&copy #{footer_message}|">Ivan Rusenov 2024</div>
 </footer>
-
 </body>
 </html>
