--- a/Flowers-Shop/src/main/resources/templates/fragments/commons.html
+++ b/Flowers-Shop/src/main/resources/templates/fragments/commons.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark z-3">
+    <nav class="navbar navbar-expand-lg navbar-dark z-3 fixed-top">
         <div class="container">
             <a class="navbar-brand glowing-gold align-text-center" sec:authorize="isAuthenticated()" th:href="@{/home}">
                 <img src="/images/orchid_9704101.png" alt="orchid" class="d-inline-block">
@@ -94,9 +94,9 @@
         </div>
     </nav>
 </header>
-<footer>
+<footer class="fixed-bottom text-white text-center">
     <!-- todo: fix responsive issue with position-fixed -->
-    <div th:text="|&copy #{footer_message}|">Ivan Rusenov 2024</div>
+    <div class="py-3" th:text="|&copy #{footer_message}|">Ivan Rusenov 2024</div>
 </footer>
 </body>
 </html>
