--- a/Flowers-Shop/src/main/resources/templates/login.html
+++ b/Flowers-Shop/src/main/resources/templates/login.html
@@ -4,36 +4,29 @@
 <body class="background1">
 <header th:replace="~{fragments/commons::nav}"></header>
 <main>
-  <!-- todo: fix responsive issue with position-absolute -->
-<!--  TODO:REMOVE USERNAME AND PASSWORD !!!-->
-  <div class="position-absolute top-50 start-50 translate-middle content-wrap w-25 mx-auto bg-opacity-75 bg-black border custom-round">
-    <h1 class="text-center mt-2 bigFont"><span class="badge badge-pill badge-dark">Login</span></h1>
-    <form class="form-floating mx-auto w-75 bg-blur" th:method="post" th:action="@{/login}" th:object="${userLoginDTO}">
-      <div class="form-floating mb-3 text-center">
-        <input th:field="*{username}" th:errorclass="is-invalid" class="form-control" id="username" placeholder="Username">
-        <label for="username">Username</label>
-        <small th:errors="*{username}" class="text-danger ">Username error message</small>
-      </div>
-<!--      <div class="form-floating mb-3 text-center">-->
-<!--        <input th:field="*{email}" th:errorclass="is-invalid" type="email" class="form-control" id="email" placeholder="name@example.com">-->
-<!--        <label for="email">Email address</label>-->
-<!--        <small th:errors="*{email}" class="text-danger">Email error message</small>-->
-<!--      </div>-->
-      <div class="form-floating mb-3 text-center">
-        <input th:field="*{password}" th:errorclass="is-invalid" type="password" class="form-control" id="password" placeholder="Password" value="111">
-        <label for="password">Password</label>
-        <small th:errors="*{password}" class="text-danger">Password error message</small>
-      </div>
-<!--      <div class="form-floating mb-3 text-center">-->
-<!--        <input th:field="*{confirmPassword}" th:errorclass="is-invalid" type="password" class="form-control" id="confirmPassword" placeholder="Confirm password">-->
-<!--        <label for="confirmPassword">Confirm Password</label>-->
-<!--        <small th:errors="*{confirmPassword}" class="text-danger">Email error message</small>-->
-<!--      </div>-->
-      <div class="form-floating mb-3 text-center">
-        <button class="btn-gold rounded-pill p-2 w-50 my-2 ">LOGIN</button>
-      </div>
-    </form>
-  </div>
+    <section class="container d-flex justify-content-center min-vh-100 align-items-center" style="max-width: 20em">
+        <div class="container mx-auto text-center border my-container">
+            <h1 class="text-center mt-2 myFont display-5"><span class="badge badge-pill badge-dark">Login</span></h1>
+            <form class="form-control-sm mx-auto bg-blur" th:method="post" th:action="@{/login}"
+                  th:object="${userLoginDTO}">
+                <div class="form-floating mb-2 text-center">
+                    <input th:field="*{username}" th:errorclass="is-invalid" class="form-control" id="username"
+                           placeholder="Username">
+                    <label for="username">Username</label>
+                </div>
+                <small th:errors="*{username}" class="text-danger ">Username error message</small>
+                <div class="form-floating text-center">
+                    <input th:field="*{password}" th:errorclass="is-invalid" type="password" class="form-control"
+                           id="password" placeholder="Password">
+                    <label for="password">Password</label>
+                </div>
+                <small th:errors="*{password}" class="text-danger">Password error message</small>
+                <div class="text-center my-4">
+                    <button class="btn-gold rounded-pill p-2 col-5">LOGIN</button>
+                </div>
+            </form>
+        </div>
+    </section>
 </main>
 <footer th:replace="~{fragments/commons::footer}"></footer>
 </body>
