--- a/Flowers-Shop/src/main/resources/templates/login.html
+++ b/Flowers-Shop/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
 <main>
     <section class="container d-flex justify-content-center min-vh-100 align-items-center" style="max-width: 20em">
         <div class="container mx-auto text-center border my-container">
-            <h1 class="text-center mt-2 myFont display-5"><span class="badge badge-pill badge-dark">Login</span></h1>
+            <h1 class="text-center mt-2 myFont1 display-3 text-white">Login</h1>
             <form class="form-control-sm mx-auto bg-blur" th:method="post" th:action="@{/login}"
                   th:object="${userLoginDTO}">
                 <div class="form-floating mb-2 text-center">
