Ufdate templates FE validation

--- a/Flowers-Shop/src/main/resources/templates/register.html
+++ b/Flowers-Shop/src/main/resources/templates/register.html
@@ -4,7 +4,7 @@
 <body class="background1">
 <header th:replace="~{fragments/commons::nav}"></header>
 <main>
-    <section class="container d-flex justify-content-center min-vh-100 align-items-center" style="max-width: 30em">
+    <section class="container d-flex justify-content-center min-vh-100 align-items-center py-5 my-5" style="max-width: 30em">
         <div class="container mx-auto text-center border my-container">
             <h1 class="text-center mt-2 myFont1 display-3 text-white">Register</h1>
             <form class="form-floating mx-auto w-75 bg-blur" th:method="post" th:action="@{/register}"
