--- a/Flowers-Shop/src/main/resources/templates/login.html
+++ b/Flowers-Shop/src/main/resources/templates/login.html
@@ -11,16 +11,16 @@
                   th:object="${userLoginDTO}">
                 <div class="form-floating mb-2 text-center">
                     <input th:field="*{username}" th:errorclass="is-invalid" class="form-control" id="username"
-                           placeholder="Username">
+                           placeholder="Username" minlength="2" maxlength="50" required>
                     <label for="username">Username</label>
+                    <small th:errors="*{username}" class="text-danger ">Username error message</small>
                 </div>
-                <small th:errors="*{username}" class="text-danger ">Username error message</small>
                 <div class="form-floating text-center">
                     <input th:field="*{password}" th:errorclass="is-invalid" type="password" class="form-control"
-                           id="password" placeholder="Password">
+                           id="password" placeholder="Password" minlength="3" maxlength="20" required>
                     <label for="password">Password</label>
+                    <small th:errors="*{password}" class="text-danger">Password error message</small>
                 </div>
-                <small th:errors="*{password}" class="text-danger">Password error message</small>
                 <div class="text-center my-4">
                     <button class="btn-gold rounded-pill p-2 col-5">LOGIN</button>
                 </div>
