--- a/Flowers-Shop/src/main/resources/static/css/style.css
+++ b/Flowers-Shop/src/main/resources/static/css/style.css
@@ -101,13 +101,13 @@ footer div {
 }
 
 
-button {
-    color: black;
-    background-color: #eef14a;
+/*button {*/
+/*    color: black;*/
+/*    background-color: #eef14a;*/
 
 
-    /* font-weight: bold; */
-}
+/*    !* font-weight: bold; *!*/
+/*}*/
 
 .gold {
     /* gold color */
