--- a/Flowers-Shop/src/main/resources/templates/users.html
+++ b/Flowers-Shop/src/main/resources/templates/users.html
@@ -4,9 +4,9 @@
 <body class="all-orders">
 <header th:replace="~{fragments/commons::nav}"></header>
 
-<section class="gradient-custom">
+<section class="">
 
-    <h1 class="display-6 p-2 m-5 fw-bold fst-italic text-center text-white">All users:
+    <h1 class="myFont1 display-3 text-white p-2 pt-5 m-5 text-center">All users:
         <span class="px-2 text-white" th:text="${#lists.size(users)}"></span>
     </h1>
 
