--- a/Flowers-Shop/src/main/resources/static/css/style.css
+++ b/Flowers-Shop/src/main/resources/static/css/style.css
@@ -70,7 +70,8 @@ footer div {
 }
 
 .my-container {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.8);
+    /*background-color: rgba(0, 0, 0, 0.7);*/
     /* border: 1px solid lightgray; */
     border-radius: 0 2em 0 2em;
 
@@ -191,11 +192,6 @@ nav img {
     border-radius: 50%;
 
 }
-
-h1 {
-
-}
-
 
 .custom-round {
     border: 1px solid light-gray;
